--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -722,6 +722,7 @@
   }
 
   .authVisualPanel {
+    display: none;
     order: -1;
     border-bottom: 1px solid rgba(255, 255, 255, 0.06);
     border-right: 0;
